# eds_ner_cardioccc

./: .gitignore  README.md  download_models.sh  pyproject.toml
configs/: config_bert_es.yml  config_bsc_ehr.yml  config_camembertav2.yml  config_cardioberta.yml  config_v1.yml  config_xlm_roberta.yml
configs/cardioccc/: config_bsc_ehr.yml  config_xlm_roberta.yml
configs/spaccc/: config_bert_es.yml  config_bsc_ehr.yml  config_camembertav2.yml  config_cardioberta.yml  config_xlm_roberta.yml
data/cardioccc/: pre_process.py
data/cardioccc/test/: casos_clinicos_cardiologia1.ann  casos_clinicos_cardiologia100.ann  casos_clinicos_cardiologia101.ann  casos_clinicos_cardiologia103.ann  casos_clinicos_cardiologia104.ann  casos_clinicos_cardiologia107.ann  casos_clinicos_cardiologia109.ann  casos_clinicos_cardiologia11.ann  casos_clinicos_cardiologia110.ann  casos_clinicos_cardiologia113.ann  casos_clinicos_cardiologia114.ann  casos_clinicos_cardiologia116.ann  casos_clinicos_cardiologia117.ann  casos_clinicos_cardiologia118.ann  casos_clinicos_cardiologia12.ann  casos_clinicos_cardiologia121.ann  casos_clinicos_cardiologia122.ann  casos_clinicos_cardiologia123.ann  casos_clinicos_cardiologia126.ann  casos_clinicos_cardiologia127.ann  casos_clinicos_cardiologia130.ann  casos_clinicos_cardiologia131.ann  casos_clinicos_cardiologia137.ann  casos_clinicos_cardiologia14.ann  casos_clinicos_cardiologia142.ann  casos_clinicos_cardiologia145.ann  casos_clinicos_cardiologia147.ann  casos_clinicos_cardiologia149.ann  casos_clinicos_cardiologia15.ann  casos_clinicos_cardiologia150.ann  casos_clinicos_cardiologia151.ann  casos_clinicos_cardiologia152.ann  (+218 more)
data/spaccc/: convert_to_brat.py
models/ner_cardioccc_bert_es/: results.tsv
models/ner_cardioccc_xlm_roberta/: results.tsv
scripts/: infer.py  run.sh  run.slurm
(+1278 files in other folders)
